--- a/Source/Presentation/Bank.EndPoint.App/Bank.EndPoint.App.csproj
+++ b/Source/Presentation/Bank.EndPoint.App/Bank.EndPoint.App.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NHibernate" Version="5.5.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
   <ItemGroup>
