--- a/Source/Presentation/Bank.EndPoint.App/Bank.EndPoint.App.csproj
+++ b/Source/Presentation/Bank.EndPoint.App/Bank.EndPoint.App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\Data\Application\Application.csproj" />
   </ItemGroup>
 
 </Project>
